--- a/src/Sandbox/AdminBundle/Resources/views/CRUD/edit.html.twig
+++ b/src/Sandbox/AdminBundle/Resources/views/CRUD/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends 'SonataAdminBundle:CRUD:list.html.twig' %}
+{% extends 'SonataAdminBundle:CRUD:edit.html.twig' %}
 
 {% block stylesheets %}
     {{ parent() }}
