Fixed position of lang

--- a/src/Sandbox/MainBundle/Resources/public/css/style.css
+++ b/src/Sandbox/MainBundle/Resources/public/css/style.css
@@ -161,8 +161,8 @@ input, button, textarea, select {
 
 #language_selector {
     position: absolute;
-    top: 25px;
-    right: 40px;
+    top: 30px;
+    right: 0;
     color: #1A1A1A;
 }
 
