--- a/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
@@ -34,5 +34,9 @@
 
 {% block content_extra %}
 <h3 class="offset">Child pages</h3>
+{#
+TODO: provide knp menu bundle child list renderer as twig extension
+https://github.com/KnpLabs/KnpMenu/blob/master/src/Knp/Menu/Renderer/ListRenderer.php#L48
 {% render "symfony_cmf_navigation.renderer:childlistAction" with { 'url': url } %}
+#}
 {% endblock %}
