--- a/src/Sandbox/AdminBundle/Resources/views/CRUD/list.html.twig
+++ b/src/Sandbox/AdminBundle/Resources/views/CRUD/list.html.twig
@@ -7,37 +7,27 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script src="{{ asset('bundles/symfonycmftree/js/jquery.cookie.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('bundles/symfonycmftree/js/jquery.treeview.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('bundles/symfonycmftree/js/jquery.treeview.edit.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('bundles/symfonycmftree/js/jquery.treeview.async.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/symfonycmftree/js/jstree/jquery.jstree.js') }}" type="text/javascript"></script>
 
     <script type="text/javascript">
         function initTrees() {
-            $("#tree").treeview({
-                url:    "{{ path('symfony_cmf_phpcr_browser_children') }}",
-                root: "{{ treeroot }}",
-                toggle: function() {
-                    $.ajax({
-                        url: "{{ path('symfony_cmf_phpcr_browser_properties') }}",
-                        dataType: "json",
-                        data: {
-                            root: this.id
-                        },
-                        success: function(response) {
-                            $("#properties").empty()
-                            $.each(response, function (index, property) {
-                                $("#properties").append(
-                                    '<tr><td>' + this.name + '</td><td>' + this.value + '</td></tr>'
-                                );
-                            });
-                        }
-                    });
-                }
-            })
+            
+            jQuery("#tree").jstree({ 
+                "json_data": {
+                    "ajax": {
+                        url:    "{{ path('symfony_cmf_phpcr_browser_children') }}",
+                        data:   function (node) {
+    	                    return { 'root' : jQuery(node).attr('id') };
+    	                }
+                    }
+                },
+                "plugins" :     [ "themes", "json_data" ] 
+            });
+            
         }
         $(document).ready(function(){
             initTrees();
+
         });
     </script>
 
