--- a/src/Sandbox/AdminBundle/Resources/views/CRUD/edit.html.twig
+++ b/src/Sandbox/AdminBundle/Resources/views/CRUD/edit.html.twig
@@ -7,37 +7,52 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script src="{{ asset('bundles/symfonycmftree/js/jquery.cookie.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('bundles/symfonycmftree/js/jquery.treeview.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('bundles/symfonycmftree/js/jquery.treeview.edit.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('bundles/symfonycmftree/js/jquery.treeview.async.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/symfonycmftree/js/jstree/jquery.jstree.js') }}" type="text/javascript"></script>
 
     <script type="text/javascript">
         function initTrees() {
-            $("#tree").treeview({
-                url:    "{{ path('symfony_cmf_phpcr_browser_children') }}",
-                root: "{{ treeroot }}",
-                toggle: function() {
-                    $.ajax({
-                        url: "{{ path('symfony_cmf_phpcr_browser_properties') }}",
-                        dataType: "json",
-                        data: {
-                            root: this.id
+            
+            jQuery("#tree").jstree({ 
+                "plugins" :     [ "themes", "types", "ui", "json_data" ],
+                "json_data": {
+                    "ajax": {
+                        url:    "{{ path('symfony_cmf_phpcr_browser_children') }}",
+                        data:   function (node) {
+    	                    return { 'root' : jQuery(node).attr('id') };
+    	                }
+                    }
+                },
+                "types": {
+                    "max_depth":        -2,
+                    "max_children":     -2,
+                    "valid_children":  [ "folder" ],
+                    "types": {
+                        "default": {
+                            "valid_children": "none",
+                            "icon": {
+                                "image": "{{ asset('bundles/symfonycmftree/images/document.png') }}"
+                            }
                         },
-                        success: function(response) {
-                            $("#properties").empty()
-                            $.each(response, function (index, property) {
-                                $("#properties").append(
-                                    '<tr><td>' + this.name + '</td><td>' + this.value + '</td></tr>'
-                                );
-                            });
+                        "folder": {
+                            "valid_children": [ "default", "folder" ],
+                            "icon": {
+                                "image": "{{ asset('bundles/symfonycmftree/images/folder.png') }}"
+                            }
                         }
-                    });
+                    }
                 }
             })
+            .bind("select_node.jstree", function (event, data) {
+                {% set token = '@@ID@@' %}
+                var base_edit_url = "{{ path('admin_sandbox_main_editablestaticcontent_edit', { 'id': token }) }}";
+                var edit_url = base_edit_url.replace("{{ token | url_encode }}", data.rslt.obj.attr("id"));
+                window.location = edit_url;
+	        })
+            .delegate("a", "click", function (event, data) { event.preventDefault(); });
         }
         $(document).ready(function(){
             initTrees();
+
         });
     </script>
 
