TreeBundle CSS selector now injected.

--- a/src/Sandbox/AdminBundle/Resources/views/CRUD/phpcrbrowser.html.twig
+++ b/src/Sandbox/AdminBundle/Resources/views/CRUD/phpcrbrowser.html.twig
@@ -2,3 +2,4 @@
 
 {% block edit_base_url %}{{ path('admin_sandbox_main_editablestaticcontent_edit', { 'id': token }) }}{% endblock %}
 {% block delete_base_url %}{{ path('admin_sandbox_main_editablestaticcontent_delete', { 'id': token }) }}{% endblock %}
+{% block selector %}#tree{% endblock %}
