--- a/src/Sandbox/AdminBundle/Resources/views/CRUD/phpcrbrowser.html.twig
+++ b/src/Sandbox/AdminBundle/Resources/views/CRUD/phpcrbrowser.html.twig
@@ -1,5 +1,6 @@
 {% extends 'SymfonyCmfPHPCRBrowserBundle:Base:tree.html.twig' %}
 
-{% block edit_base_url %}{{ path('admin_sandbox_main_editablestaticcontent_edit', { 'id': token }) }}{% endblock %}
+{% block create_base_url %}{{ path('admin_sandbox_main_editablestaticcontent_create', { 'id': token }) }}{% endblock %}
 {% block delete_base_url %}{{ path('admin_sandbox_main_editablestaticcontent_delete', { 'id': token }) }}{% endblock %}
+{% block edit_base_url %}{{ path('admin_sandbox_main_editablestaticcontent_edit', { 'id': token }) }}{% endblock %}
 {% block selector %}#tree{% endblock %}
