--- a/src/Sandbox/AdminBundle/Resources/views/CRUD/list.html.twig
+++ b/src/Sandbox/AdminBundle/Resources/views/CRUD/list.html.twig
@@ -7,7 +7,7 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {% include 'SandboxAdminBundle:CRUD:phpcrbrowser.html.twig' %}
+    {% include 'SymfonyCmfPHPCRBrowserBundle:Base:tree.html.twig' with { 'selector': '#tree' } %}
 {% endblock %}
 
 {% block side_menu %}
