--- a/src/Sandbox/MainBundle/Resources/views/Demo/template_explicit.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/Demo/template_explicit.html.twig
@@ -2,22 +2,8 @@
 {% extends "SandboxMainBundle::skeleton.html.twig" %}
 
 {% block content %}
-<div xmlns:sioc="http://rdfs.org/sioc/ns#"
-     xmlns:dcterms="http://purl.org/dc/terms/"
-     typeof="sioc:Post"
-     about="{{ page.path }}"
-     class="articleContainer">
-
-     {% if is_granted("IS_AUTHENTICATED_ANONYMOUSLY") %}
-         <div class="hiddenfieldsContainer">
-             <div class="hiddenfieldsToggle"></div>
-             <div class="hiddenfields">
-                <div class="hiddenfieldsCloseButton"></div>
-                <h2>Article settings</h2>
-             </div>
-             <div class="hiddenfieldsCloseCorner"></div>
-         </div>
-    {% endif %}
+<div class="articleContainer">
+    <p><em>This is a template explicitly specified by a route</em></p>
     <h1 id="main_title" property="dcterms:title">{{ page.title }}</h1>
     <div property="sioc:content">
         {{ page.content|raw }}
