--- a/src/Sandbox/TestBundle/Resources/views/Test/index.html.twig
+++ b/src/Sandbox/TestBundle/Resources/views/Test/index.html.twig
@@ -1,5 +1,8 @@
-{% extends "SandboxTestBundle:Test:layout.html.twig" %}
+{% extends "SandboxMainBundle::skeleton.html.twig" %}
 
 {% block content %}
-<h1>Hello World!</h1>
+<div>
+    <h1>Hello World!</h1>
+    <p>This is a template used by the TestController found with a standard symfony route.</p>
+</div>
 {% endblock %}
