--- a/src/Sandbox/AdminBundle/Resources/views/CRUD/tree.html.twig
+++ b/src/Sandbox/AdminBundle/Resources/views/CRUD/tree.html.twig
@@ -11,10 +11,25 @@
                 "folder":   "{{ asset('bundles/symfonycmftree/images/folder.png') }}"
             },
             "route": {
-                "create":   'admin_sandbox_main_editablestaticcontent_create',
                 "edit":     'admin_sandbox_main_editablestaticcontent_edit',
                 "erase":    'admin_sandbox_main_editablestaticcontent_delete'
+            },
+            "doctypes": {
+                "blogpost": { 
+                    "label": 'BlogPost', 
+                    "action": function (node) {
+                        window.location = Routing.generate('admin_sandbox_main_editablestaticcontent_create', { "type": "blogpost" })
+                    }
+                },
+                "static": { 
+                    "label": 'StaticContent', 
+                    "action": function (node) {
+                        window.location = Routing.generate('admin_sandbox_main_editablestaticcontent_create', { "type": "static" })
+                    }
+                }
             }
         });
     });
+    
+    
 </script>
