--- a/src/Sandbox/MainBundle/Resources/public/css/style.css
+++ b/src/Sandbox/MainBundle/Resources/public/css/style.css
@@ -245,7 +245,7 @@ input, button, textarea, select {
     position: absolute;
     left: 50%;
     margin-left: -600px;
-    top: 232px;
+    top: 208px;
     margin-bottom: 5px;
 }
 
@@ -265,9 +265,21 @@ input, button, textarea, select {
 
 
 /** content **/
-
 #navigation a:hover {
     text-decoration: underline;
+}
+
+#navigation .cmf-breadcrumb {
+    width: 100%;
+    height: 20px;
+}
+
+#navigation .cmf-breadcrumb li {
+    float: left;
+    list-style-type: none;
+    margin: 0 11px 0 0;
+    background: url('/bundles/sandboxmain/images/pager-next.png') no-repeat 0 center;
+    padding: 0 0 0 14px;
 }
 
 #navigation .cmf-breadcrumb a {
