fixed background for breadcrumb

--- a/src/Sandbox/MainBundle/Resources/public/css/style.css
+++ b/src/Sandbox/MainBundle/Resources/public/css/style.css
@@ -232,7 +232,7 @@ input, button, textarea, select {
     float: left;
     list-style-type: none;
     margin: 0 11px 0 0;
-    background: url('../bundles/sandboxmain/images/pager-next.png') no-repeat 0 center;
+    background: url('/bundles/sandboxmain/images/pager-next.png') no-repeat 0 center;
     padding: 0 0 0 14px;
 }
 
