added property to index.hmtl

--- a/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
@@ -6,7 +6,7 @@
      about="{{ page.path }}"
      class="articleContainer">
 
-    <ul rel="dc:subject">
+    <ul rel="dc:subject" property="dc:subject">
         {% for subject in page.tags %}
         <li about="{{ subject|replace({'<': '', '>': ''}) }}"></li>
         {% endfor %}
