--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -10,15 +10,15 @@
             {% endstylesheets %}
 
             {% if is_granted("IS_AUTHENTICATED_ANONYMOUSLY") %}
-                {% stylesheets '@LiipVieBundle/vendor/hallo/examples/Aristo/jquery-ui-1.8.7.custom.css'
+                {% stylesheets '@LiipVieBundle/Resources/public/vendor/hallo/examples/Aristo/jquery-ui-1.8.7.custom.css'
                             '@LiipVieBundle/Resources/public/css/halloLiipStyle.css'
-                            '@LiipVieBundle/vendor/create/themes/midgard-tags/tags.css'
-                            '@LiipVieBundle/vendor/hallo/examples/overlay.css'
+                            '@LiipVieBundle/Resources/public/vendor/hallo/examples/overlay.css'
                             '@LiipVieBundle/Resources/halloplugins/image.css'
                             '@LiipVieBundle/Resources/halloplugins/link.css'
                 %}
                     <link rel="stylesheet" href="{{ asset_url }}" media="screen" type="text/css"/>
                 {% endstylesheets %}
+                <link rel="stylesheet" href="bundles/liipvie/vendor/create/themes/midgard-tags/tags.css" media="screen" type="text/css"/>
             {% endif %}
         {% endblock %}
 
