Use twig-extension from SonataBlockBundle

--- a/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-{{ symfony_cmf_block('additionalInfoBlock') }}
+{{ sonata_block_render('additionalInfoBlock') }}
 
 <div xmlns:sioc="http://rdfs.org/sioc/ns#"
      xmlns:dcterms="http://purl.org/dc/terms/"
