--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -38,7 +38,7 @@
                     <li><a href="#navigation">Go to main navigation</a></li>
                 </ul>
 
-                <h1 id="logo-text"><a href="/">CMF Sandbox</a></h1>
+                <h1 id="logo-text"><a href="{{ asset('') }}">CMF Sandbox</a></h1>
                 <p id="slogan">Symfony2 Content Management Framework</p>
             {% endblock %}
             <div id="language_selector">
