Adapted the template to use the new BlockFormat

--- a/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
@@ -2,7 +2,9 @@
 
 {% block content %}
 
-{{ sonata_block_render('additionalInfoBlock') }}
+{{ sonata_block_render({
+    'name': 'additionalInfoBlock'
+}) }}
 
 <div xmlns:sioc="http://rdfs.org/sioc/ns#"
      xmlns:dcterms="http://purl.org/dc/terms/"
