--- a/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
@@ -11,7 +11,7 @@
         <li about="{{ subject|replace({'<': '', '>': ''}) }}"></li>
         {% endfor %}
     </ul>
-    <h1 id="main_title" property="dcterms:title">{{ page.title }}</h1>
+    <h1 id="main_title" property="dcterms:title">{{ page.title|raw }}</h1>
     <div property="sioc:content">
         {{ page.content|raw }}
     </div>
