added bg-color to all blocks

--- a/src/Sandbox/MainBundle/Resources/public/css/style.css
+++ b/src/Sandbox/MainBundle/Resources/public/css/style.css
@@ -335,3 +335,7 @@ ul[rel="dc:subject"] {
 .cmf-childlist li {
     padding-bottom: 5px;
 }
+
+.symfony_cmf-block {
+    background-color: #ECFFB8;
+}
