Reflect change in BlockBundle

--- a/src/Sandbox/MainBundle/Resources/views/Block/demo_block.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/Block/demo_block.html.twig
@@ -1,4 +1,4 @@
- {% extends 'SymfonyCmfBlockBundle::block_base.html.twig' %}
+ {% extends 'SymfonyCmfBlockBundle:Block:block_base.html.twig' %}
 
 {% block block %}
     <h1>Demo Action block</h1>
