--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -26,6 +26,7 @@
         {% endblock %}
     </head>
     <body>
+        <a href="https://github.com/symfony-cmf/cmf-sandbox"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"/></a>
         <div id="header">
             {% block header %}
                 {% if is_granted("IS_AUTHENTICATED_ANONYMOUSLY") %}
