--- a/src/Sandbox/BlockBundle/Resources/views/Block/demo_action_block.html.twig
+++ b/src/Sandbox/BlockBundle/Resources/views/Block/demo_action_block.html.twig
@@ -1,6 +1,8 @@
  {% extends 'SymfonyCmfBlockBundle:Block:block_base.html.twig' %}
 
 {% block block %}
-    <h1>Demo Action Block</h1>
-    <p>This block content is rendered by a custom Symfony2 action. Thus it has no inline-editing.</p>
+    <div class="span3">
+        <h2>Demo Action Block</h2>
+        <p>This block content is rendered by a custom Symfony2 action. Thus it has no inline-editing.</p>
+    </div>
 {% endblock %}
