--- a/src/Sandbox/BlockBundle/Resources/views/Block/block_simple.html.twig
+++ b/src/Sandbox/BlockBundle/Resources/views/Block/block_simple.html.twig
@@ -4,9 +4,9 @@
      <div xmlns:sioc="http://rdfs.org/sioc/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:dcterms="http://purl.org/dc/terms/"
           typeof="sioc:Post"
           about="{{ block.id }}"
-          class="articleContainer">
+          class="articleContainer span3">
 
-         <h1 id="main_title" property="dcterms:title">{{ block.title|raw }}</h1>
+         <h2 id="main_title" property="dcterms:title">{{ block.title|raw }}</h2>
          <div property="sioc:content">{{ block.content|raw }}</div>
 
      </div>
