--- a/src/Sandbox/MainBundle/Resources/public/css/style.css
+++ b/src/Sandbox/MainBundle/Resources/public/css/style.css
@@ -1,326 +1,91 @@
-html {
-    background: #fff;
-    color: #000;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 0.9em;
-}
-
-body, div, dl, dt, dd, ul, ol, li,
-h1, h2, h3, h4, h5, h6, pre, code,
-form, fieldset, legend, input, button,
-textarea, p, blockquote, th, td {
-    margin: 0;
-    padding: 0;
-}
-
-#header {
-    margin-bottom: 0;
-}
-
-div.inner > div h1 {
-    font-size: 1.55em;
-    font-weight: bold;
-}
-
 body {
-    background-color: #fff;
-    color: #24272e;
+    background-color: #ccc;
 }
 
-a {
-    color: #8AB84B;
+
+.container {
+    margin-top: 2em;
+    margin-bottom: 2em;
 }
 
-p {
-    font-size: 1em;
-    line-height: 1.4;
+a, a:visited {
+    background:inherit;
+    color:#79A325;
+    text-decoration:none;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font: normal 66px Georgia, serif;
+.boxed {
+    border-radius:4px;
 }
 
-h1 {
-    margin-top: 30px;
-    margin-bottom: 25px;
-    line-height: 1.1;
-    color: #8AB84B;
-    font-size: 2.3em;
+#top {
 }
 
-h2 {
-    margin-top: 30px;
-    margin-bottom: 10px;
-    line-height: 1.05;
-    line-height: 1.2;
-    color: #666;
-    font-size: 1.8em;
-}
-
-h3 {
-    margin-bottom: 8px;
-    line-height: 1.2;
-    color: #5e6984;
-}
-
-strong {
-    font-family: 'Profile-Bold';
-}
-
-fieldset, img {
-    border: 0;
-}
-
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
-address, caption, cite, code, dfn, em,
-strong, th, var, optgroup {
-    font-style: inherit;
-    font-weight: inherit;
-}
-
-del, ins {
-    text-decoration: none;
-}
-
-li {
-    list-style-type: square;
-    margin-left: 16px;
-}
-
-caption, th {
-    text-align: left;
-}
-
-dt {
-    font-weight: bold;
-}
-
-q:before, q:after {
-    content: '';
-}
-
-abbr, acronym {
-    border: 0;
-    font-variant: normal;
-}
-
-sub {
-    vertical-align: baseline;
-}
-
-legend {
-    color:#000;
-}
-
-input, button, textarea, select, optgroup, option {
-    font-family: inherit;
-    font-size: inherit;
-    font-style: inherit;
-    font-weight: inherit;
-}
-
-input, button, textarea, select {
-    *font-size: 100%;
-}
-
-.offset, #skiplinks {
-    position: absolute;
-    left: -9000px;
-}
-
-.not_valid {
-    background:#FBD8DB!important;
-    color:#90111A!important;
-}
-
-#header, .inner, #navigation {
-    width: 700px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-#header {
+#banner {
     position: relative;
-    margin-bottom: 20px;
-    padding-top: 25px;
-    height: 130px;
 }
 
-#header h1#logo-text {
-    margin-bottom: 0;
+#banner .hero-unit {
+    background-color: #a3ca5f;
+    margin-bottom: .5em;
 }
 
-#header h1#logo-text a {
-    color: #8AB84B;
-    left: 55px;
+#logo-text a{
+    color: #fff;
     text-decoration: none;
-    top: 20px;
-    font-size: 2.1em;
 }
 
-#header p#slogan {
-    color: #888;
-    font-size: 15px;
-    left: 150px;
+#breadcrumb .breadcrumb {
+    border: none;
+    background-color: #4b4b4b;
+    background-image: none;
+    box-shadow: none;
+    margin-bottom: .5em;
+}
+
+#breadcrumb .breadcrumb li {
+    text-shadow: none;
+}
+
+#breadcrumb .breadcrumb li a {
+    color: #a3ca5f;
+}
+
+#breadcrumb .breadcrumb li:after {
+    content: " :";
+    color: #ccc;
+}
+
+#top li {
+    display: inline;
+}
+
+#top li.selected a {
+    color: #333;
 }
 
 #language_selector {
-    position: absolute;
-    top: 30px;
-    right: 0;
-    color: #1A1A1A;
-}
-
-#language_selector li {
-    list-style-type: none;
-    float: left;
-}
-
-#language_selector li a {
-    color: #888;
-}
-
-#language_selector li.selected a {
-    color: #666;
 }
 
 #language_selector li span {
     display: none;
 }
 
-#navigation {
+#content-container {
+    background-color: #fff;
+    padding: 2em 0;
 }
 
-#navigation > ul {
-    position: absolute;
-    left: 50%;
-    margin-left: -600px;
-    top: 208px;
-    margin-bottom: 5px;
-}
-
-#navigation > ul > li {
-    margin-bottom: 5px;
-}
-
-#navigation > ul > li > ul > li {
-    margin-left: 20px;
-    margin-top: 5px;
-}
-
-#navigation a {
-    color: #1A1A1A;
-    text-decoration: none;
-}
-
-
-/** content **/
-#navigation a:hover {
-    text-decoration: underline;
-}
-
-#navigation .cmf-breadcrumb {
-    width: 100%;
-    height: 20px;
-}
-
-#navigation .cmf-breadcrumb li {
-    float: left;
-    list-style-type: none;
-    margin: 0 11px 0 0;
-    background: url('/bundles/sandboxmain/images/pager-next.png') no-repeat 0 center;
-    padding: 0 0 0 14px;
-}
-
-#navigation .cmf-breadcrumb a {
-    color: #333;
-    text-decoration: none;
-}
-
-#content {
-    overflow: hidden;
-    padding: 10px 0 30px 0;
-    border-bottom: 1px solid #e3e4e4;
-    min-height: 300px;
-}
-
-#content h1 a,
-#content h2 a {
-    text-decoration: none;
-}
-
-#content h1 a:link,
-#content h1 a:visited,
-#content h2 a:link,
-#content h2 a:visited {
-    color: inherit;
-}
-
-#content h1 a:hover,
-#content h2 a:hover {color:#5e6984}
-
-#footer {
-    background-color:#24272d;
-}
-
-#footer .inner {
-    padding: 32px 20px 20px;
-}
-
-#footer {
-    color: #fff;
-}
-
-#footer p {
-    font-size: 1.04em;
-    line-height: 1.3;
-    margin-bottom: 10px;
-}
-
-#footer p a:link,
-#footer p a:visited {
-    color: #fff;
-}
-
-#footer p a:link:hover,
-#footer p a:visited:hover {
-    color: #a7a8ab;
-}
-
-#footer .read_more {
-    padding-left: 10px;
-    color: #fff;
-    text-shadow: none;
-    background-color: transparent;
-    background-position: 0 5px;
-}
-
-#footer .read_more:hover {
-    color: #a7a8ab;
-    background-position: 0 -15px;
-}
-
-.symfony_cmf-block {
-    background-color: #ECFFB8;
-    min-height: 140px;
-    padding: 6px;
-    float: left;
-    width: 216px;
-    margin-right: 5px;
-    margin-bottom: 40px;
-}
-
-.symfony_cmf-block h1 {
-    margin-top: 0;
+#content, #content_extra {
+    position: relative;
 }
 
 .articleContainer {
     position: relative;
-    float: left;
+}
+
+.articleContainer > * {
+    margin-right: 2em;
 }
 
 .articleContainer p:after {
@@ -331,22 +96,6 @@ input, button, textarea, select {
     visibility: hidden;
 }
 
-.article_info {
-    margin: -5px 0 10px;
-}
-
-ul[rel="dc:subject"] {
-    display: none;
-}
-
-#content_extra .cmf-childlist a {
-    text-decoration: none;
-}
-
-.cmf-childlist {
-    padding: 10px 0;
-}
-
-.cmf-childlist li {
-    padding-bottom: 5px;
+#footer {
+    margin-top: 1em;
 }
