--- a/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
@@ -2,10 +2,6 @@
 
 {% block content %}
 
-{{ sonata_block_render({
-    'name': 'additionalInfoBlock'
-}) }}
-
 <div xmlns:sioc="http://rdfs.org/sioc/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:dcterms="http://purl.org/dc/terms/"
      typeof="sioc:Post"
      about="{{ page.path }}"
@@ -21,6 +17,17 @@
         {{ page.content|raw }}
     </div>
 </div>
+
+<hr/>
+
+<div class="row">
+{{ sonata_block_render({
+    'name': 'additionalInfoBlock'
+}) }}
+</div>
+
+<hr/>
+
 {{ parent() }}
 {% endblock %}
 
