--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -9,8 +9,8 @@
             {% stylesheets
                 '@SandboxMainBundle/Resources/public/bootstrap/css/bootstrap.min.css'
                 '@SandboxMainBundle/Resources/public/bootstrap/css/bootstrap-responsive.min.css'
+                '@SandboxMainBundle/Resources/public/css/style.css'
             %}
-                <!--'@SandboxMainBundle/Resources/public/css/style.css'-->
 
             <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
             <!--[if lt IE 9]>
@@ -37,81 +37,86 @@
         {% endblock %}
     </head>
     <body>
-        <a href="https://github.com/symfony-cmf/cmf-sandbox"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"/></a>
+        {% if is_granted("IS_AUTHENTICATED_ANONYMOUSLY") %}
+            <div id="userBar">
+                <div class="inner"><button class="saveButton">Saved</button></div>
+            </div>
+        {% endif %}
+
         <div class="container">
 
             <div id="top" class="row">
-                <ul id="skiplinks" class="span9">
-                    <li><a href="#main">Go to main content</a></li>
-                    <li><a href="#navigation">Go to main navigation</a></li>
-                </ul>
-                <div id="language_selector" class="span3">
-                    {% block language_selector %}
-                        {% if page is defined %}
-                            {% render "symfony_cmf_multilang_content.languageSelectorController:languagesAction" with {"id" : page.path, "languageUrls": languageUrls|default(false) } %}
-                        {% endif %}
-                    {% endblock %}
+                <div id="banner" class="span12">
+                    <ul id="skiplinks" class="pull-left hidden-desktop">
+                        <li><a href="#main">Go to main content</a></li>
+                        <li><a href="#navigation">Go to main navigation</a></li>
+                    </ul>
+                    <div id="language_selector" class="pull-right">
+                        {% block language_selector %}
+                            {% if page is defined %}
+                                {% render "symfony_cmf_multilang_content.languageSelectorController:languagesAction" with {"id" : page.path, "languageUrls": languageUrls|default(false) } %}
+                            {% endif %}
+                        {% endblock %}
+                    </div>
                 </div>
             </div>
 
             <div class="row">
-                <div class="span12">
-                    {% block header %}
-                        {% if is_granted("IS_AUTHENTICATED_ANONYMOUSLY") %}
-                            <div id="userBar">
-                                <div class="inner"><button class="saveButton">Saved</button></div>
+                <div id="banner" class="span12">
+                    <a href="https://github.com/symfony-cmf/cmf-sandbox"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"/></a>
+                    <div class="hero-unit">
+                        <h1 id="logo-text"><a href="{{ asset('') }}">CMF Sandbox</a></h1>
+                        <p id="slogan">Symfony2 Content Management Framework</p>
+                    </div>
+                </div>
+                {% set currentItem = knp_menu_get('main').currentItem %}
+                {% if currentItem %}
+                <div id="breadcrumb" class="span12">
+                    <ul class="breadcrumb boxed">
+                        {% for title, url in currentItem.breadcrumbsArray %}
+                            <li><a href="{{url}}">{{ title }}</a></li>
+                        {% endfor %}
+                    </ul>
+                </div>
+                {% endif %}
+
+            </div>
+
+
+            <div  class="row">
+                <div id="content-container" class="span12 boxed">
+                    <div  class="row">
+                            <div id="navigation" class="span3">
+                                {% block navigation %}
+                                    {{ knp_menu_render('main') }}
+                                {% endblock %}
                             </div>
-                        {% endif %}
 
-                        <div class="hero-unit">
-                            <h1 id="logo-text"><a href="{{ asset('') }}">CMF Sandbox</a></h1>
-                            <p id="slogan">Symfony2 Content Management Framework</p>
+                            <div class="span9">
+                                <div id="content">
+                                    <div class="inner">
+                                        {% block content %}
+                                        {% endblock %}
+                                    </div>
+                                </div>
+
+                                <div id="content_extra">
+                                    <div class="inner">
+                                        {% block content_extra %}
+                                        {% endblock %}
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    {% endblock %}
-                </div>
+                    </div>
             </div>
 
-            <div class="row">
-                <div id="navigation" class="span3 sidebar-nav">
-                    {% block navigation %}
-                        {{ knp_menu_render('main') }}
-                    {% endblock %}
-                </div>
-
-                <div class="span9">
-                    {% set currentItem = knp_menu_get('main').currentItem %}
-                    {% if currentItem %}
-                    <div id="breadcrumb">
-                        <ul class="breadcrumb">
-                            {% for title, url in currentItem.breadcrumbsArray %}
-                                <li><a href="{{url}}">{{ title }}</a></li>
-                            {% endfor %}
-                        </ul>
-                    </div>
-                    {% endif %}
-
-                    <div id="content">
-                        <div class="inner">
-                            {% block content %}
-                            {% endblock %}
-                        </div>
-                    </div>
-
-                    <div id="content_extra">
-                        <div class="inner">
-                            {% block content_extra %}
-                            {% endblock %}
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <hr/>
-
-            <div id="footer">
+            <div id="footer" class="row">
+                <div class="span12">
                 {% block footer %}
-                    {% include "SymfonyCmfCoreBundle:Default:footer.html.twig" %}
+                    <p>Powered by <a href="http://cmf.symfony.com/">Symfony CMF</a></p>
                 {% endblock %}
+                </div>
             </div>
         </div>
 
