--- a/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
@@ -5,9 +5,9 @@
 <div xmlns:sioc="http://rdfs.org/sioc/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:dcterms="http://purl.org/dc/terms/"
      typeof="sioc:Post"
      about="{{ page.path }}"
-     class="articleContainer">
+     class="articleContainer hero-unit">
 
-    <ul rel="dc:subject" property="dc:subject">
+    <ul rel="dc:subject" property="dc:subject" class="tags">
         {% for subject in page.tags %}
         <li about="{{ subject|replace({'<': '', '>': ''}) }}"></li>
         {% endfor %}
