--- a/src/Sandbox/MainBundle/Resources/views/Homepage/index.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/Homepage/index.html.twig
@@ -5,7 +5,7 @@
      xmlns:dcterms="http://purl.org/dc/terms/"
      typeof="sioc:Post"
      about="{{ page.path }}"
-     class="articleContainer">
+     class="articleContainer hero-unit">
 
      {% if is_granted("IS_AUTHENTICATED_ANONYMOUSLY") %}
          <div class="hiddenfieldsContainer">
